--- a/index.css
+++ b/index.css
@@ -10,3 +10,10 @@ body {
     font-size: 24px;
     margin-bottom: 20px;
 }
+
+#amiibo-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
